--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,18 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Homepage</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <header>
-    <div class="container">
-      <img src="logo.png" alt="Logo">
+    <nav>
+      <label class="logo">
+        <img src="logo.png" alt="Logo"> Expense Tracker
+      </label>      
       <ul>
-      <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-      <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-      <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-      <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-    </div>
+      <li><a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a></li>
+      <li><a href="#"><i class="fa fa-fw fa-search"></i> Search</a></li>
+      <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li>
+      <li><a href="#"><i class="fa fa-fw fa-user"></i> Login/Register</a></li>
+    </ul>
+    </nav>
   </header>
   <main>
     <div class="container">
