--- a/Templates/main.css
+++ b/Templates/main.css
@@ -1,3 +1,11 @@
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -9,6 +17,19 @@ header {
   padding: 20px;
 }
 
+nav{
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
+}
+
+label.logo{
+  color:white
+  font size:35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font=weight: bold;
+}
 .container {
   max-width: 960px;
   margin: 0 auto;
