--- a/Templates/main.css
+++ b/Templates/main.css
@@ -24,11 +24,34 @@ nav{
 }
 
 label.logo{
-  color:white
-  font size:35px;
+  color:white;
+  font-size:35px;
   line-height: 80px;
-  padding: 0 100px;
-  font=weight: bold;
+  padding: 0 100p;
+  font-weight: bold;
+}
+
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a{
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+a.active,a:hover{
+  background:#1b9bff;
+  transition: .5s;
 }
 .container {
   max-width: 960px;
