--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -1,85 +1,165 @@
 *{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
-  
-  header {
-    background-color: #fff;
-    padding: 20px;
-  }
-  
-  nav{
-    background: #0082e6;
-    height: 80px;
-    width: 100%;
-  }
-  
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+header {
+  background-color: #fff;
+  padding: 20px;
+}
+
+nav{
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
+}
+
+label.logo{
+  color:white;
+  font-size:35px;
+  line-height: 80px;
+  padding: 0 100p;
+  font-weight: bold;
+}
+
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a{
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+a.active,a:hover{
+  background:#1b9bff;
+  transition: .5s;
+}
+
+.checkbtn{
+  font-size: 30px;
+  color:white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check{
+  display: none;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+@media (max-width: 952px) {
   label.logo{
-    color:white;
-    font-size:35px;
-    line-height: 80px;
-    padding: 0 100p;
-    font-weight: bold;
+    font-size: 30px;
+    padding-left: 50px;
   }
-  
-  nav ul{
-    float: right;
-    margin-right: 20px;
+  nav ul li a{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 858px) {
+  .checkbtn{
+    display: block;
+  }
+  ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
   }
   nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    display: block;
   }
-  
   nav ul li a{
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+    font-size: 20px;
+    margin:50px 0 ;
+    line-height: 30px;
   }
-  
-  a.active,a:hover{
-    background:#1b9bff;
-    transition: .5s;
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
   }
-  .container {
-    max-width: 960px;
-    margin: 0 auto;
+  #check:checked ~ ul{
+    left: 0;
   }
-  
-  .row {
-    margin-bottom: 20px;
-  }
-  
-  .col-md-4 {
-    width: 33.33%;
-    float: left;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  p {
-    margin-bottom: 10px;
-  }
-  
-  footer {
-    background-color: #ccc;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  
+}
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card {
+  background: white;
+  width: 270px;
+  margin: 10px;
+  border-radius: 15px;
+}
+
+.card-image {
+  height: 170px;
+  margin-bottom: 15px;
+  background-size: cover;
+  border-radius: 15px 15px 0 0;
+}
+
+.car-1{
+  background-image: url();
+}
+
+.car-2{
+  background-image: url();
+}
+
+.car-3{
+  background-image: url();
+}
+
+.card p {
+  padding: 10px;
+}
+
+.card:hover{
+  background-color: aqua;
+  color: white;
+  cursor: pointer;
+  transform: scale(1.03);
+  transition: all 1s ease;
+}
+
+footer {
+  background-color: #ccc;
+  padding: 20px;
+  text-align: center;
+}
+
