changes to the individual files

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -25,24 +25,25 @@
     </ul>
     </nav>
   </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <img src="image1.jpg" alt="Image 1">
+  <body>
+  <section class="container">
+      <div class="card">
+        <div class="card-image car-1"></div>
+          <h2>Title</h2>
           <p>This is a paragraph about the first image.</p>
-        </div>
-        <div class="col-md-4">
-          <img src="image2.jpg" alt="Image 2">
+          </div>
+        <div class="card">
+          <div class="card-image car-2"></div>
+          <h2>Title</h2>
           <p>This is a paragraph about the second image.</p>
         </div>
-        <div class="col-md-4">
-          <img src="image3.jpg" alt="Image 3">
+        <div class="card">
+        <div class="card-image car-3"></div>
+          <h2>Title</h2>
           <p>This is a paragraph about the third image.</p>
         </div>
-      </div>
-    </div>
-  </main>
+  </section>
+  </body>
   <footer>
     <div class="container">
       <p>Copyright &copy; 2023</p>
