--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,53 @@
 {% extends "base.html" %}
-{% block content%}
-<div class="container d-flex justify-content-center">
-    <div class="row justify-content-center">
-        {% for expense in expenses %}
-            <div class="card border-danger mb-3" style="margin: 1rem; min-width: 18rem;">
-                <div class="card-header">{{ expense.category }}</div>
-                <div class="card-body">
-                    <h5 class="card-title">{{expense.title}}</h5>
-                    <p class="card-text">{{expense.amount}}</p>
-                    <p class="card-text"><small class="text-muted">{{expense.date.strftime('%Y-%m-%d')}}</small>
-                    </p>
-                    <a href='#' class="btn btn-primary">Edit</a>
-                    <a href='#' class="btn btn-danger">Delete</a>
+{% block content %}
+    <div class="container d-flex justify-content-center">
+        <div class="row justify-content-center">
+            {% for expense in expenses %}
+                <div class="card border-danger mb-3"
+                     style="margin: 1rem;
+                            min-width: 18rem">
+                    <div class="card-header">{{ expense.category }}</div>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ expense.title }}</h5>
+                        <p class="card-text">{{ expense.amount }}</p>
+                        <p class="card-text">
+                            <small class="text-muted">{{ expense.date.strftime("%Y-%m-%d") }}</small>
+                        </p>
+                        <a href='{{ url_for('update', expense_id=expense.id) }}'
+                           class="btn btn-primary">Edit</a>
+                        <button type="button"
+                                class="btn btn-danger btn-sm m-1"
+                                data-toggle="modal"
+                                data-target="#delete-{{ expense.id }}">Delete</button>
+                        <!-- Modal -->
+                        <div class="modal fade"
+                             id="delete-{{ expense.id }}"
+                             tabindex="-1"
+                             role="dialog"
+                             aria-labelledby="deleteModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="deleteModalLabel">Delete Expense?</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true"></span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <form action="{{ url_for('delete', expense_id=expense.id) }}" method="post">
+                                            <input class="btn btn-danger" type="submit" value="Delete">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        {% endfor%}
+        {% endfor %}
     </div>
 </div>
-{% endblock%}
+</div>
+{% endblock content %}
