--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("images/");
+  background-image: url("images/background.avif");
   background-size: cover;
   
 }
