added faqs into the homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <title>Homepage</title>
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,8 +27,8 @@
             </div>
     </div>
 </nav>
-  <body>
 
+<body>
   <section class="container">
       <div class="card">
         <div class="card-image car-1"></div>
@@ -52,12 +53,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </main>
-  </body>
-  <footer>
-    <div class="container">
+</body>
+
+  <footer class="footer">
+    <div class="block">
+      <div class="row">
+        <div class="footer-col">
+          <h4>
+            <img src="/templates/static/css/images/logo.png" alt="Logo">
+            Expense Tracker
+          </h4>
+        </div>
+
+        <div class="footer-col">
+          <h4>FAQs</h4>
+          <ul>
+            <li><a href="faqs.html">Frequent Asked Question</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h4>Reach us at:</h4>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>  
+        </div>
+
+        <div class="footer-col">
+          <h4>Address</h4>  
+        </div>
+      </div>
       <p>Copyright &copy; 2023</p>
     </div>
   </footer>
-</body>
 </html>
 
