--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Homepage</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="faqs.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -25,38 +25,77 @@
                 <a class="nav-item nav-link" href="#">Login</a>
                 <a class="nav-item nav-link" href="#">Register</a>
             </div>
-        </ul>
     </div>
-  </nav>
+</nav>
 
-  <section class="container">
-    <h2>Welcome to Expense Tracker</h2>
-    <p>Track your expenses easily and efficiently with our Expense Tracker app.</p>
-
-    <h3>Frequently Asked Questions</h3>
-    <div class="faq">
-      <button class="faq-question" data-toggle="collapse" data-target="#faq1" aria-expanded="false" aria-controls="faq1">
-        How does the Expense Tracker app work?
-      </button>
-      <div class="collapse" id="faq1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus elit ut felis finibus, et euismod velit vestibulum. Sed tempus, urna ut lobortis luctus, nunc nunc congue sem, et volutpat justo ipsum id elit.</p>
-      </div>
-
-      <button class="faq-question" data-toggle="collapse" data-target="#faq2" aria-expanded="false" aria-controls="faq2">
-        Can I sync the Expense Tracker with my bank accounts?
-      </button>
-      <div class="collapse" id="faq2">
-        <p>Nullam aliquet mi sit amet quam facilisis, nec scelerisque dolor dapibus. Aenean vestibulum neque in eros lobortis, id gravida sem vulputate. Mauris eu mi quis mauris suscipit rutrum in id nunc.</p>
-      </div>
-
-      <button class="faq-question" data-toggle="collapse" data-target="#faq3" aria-expanded="false" aria-controls="faq3">
-        Is the Expense Tracker app available on mobile devices?
-      </button>
-      <div class="collapse" id="faq3">
-        <p>Sed vitae dapibus velit. Suspendisse volutpat, dui at egestas ultrices, nunc tellus fringilla risus, nec rhoncus neque massa ut dui. Vestibulum tincidunt dapibus est, nec fringilla ex semper at.</p>
-      </div>
-    </div>
-  </section>
+<body>
+    <section class="container">
+        <h2>Welcome to Expense Tracker</h2>
+        <p>Track your expenses easily and efficiently with our Expense Tracker app.</p>
+    
+        <h3>Frequently Asked Questions</h3>
+        <div class="faq">
+          <div class="card">
+            <div class="card-header" id="faq1-header">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#faq1" aria-expanded="false"
+                  aria-controls="faq1">
+                  How does the Expense Tracker app work?
+                </button>
+              </h5>
+            </div>
+            <div id="faq1" class="collapse" aria-labelledby="faq1-header" data-parent=".faq">
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus elit ut felis finibus, et euismod
+                  velit vestibulum. Sed tempus, urna ut lobortis luctus, nunc nunc congue sem, et volutpat justo ipsum id
+                  elit.</p>
+              </div>
+            </div>
+          </div>
+    
+          <div class="card">
+            <div class="card-header" id="faq2-header">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#faq2" aria-expanded="false"
+                  aria-controls="faq2">
+                  Can I sync the Expense Tracker with my bank accounts?
+                </button>
+              </h5>
+            </div>
+            <div id="faq2" class="collapse" aria-labelledby="faq2-header" data-parent=".faq">
+              <div class="card-body">
+                <p>Nullam aliquet mi sit amet quam facilisis, nec scelerisque dolor dapibus. Aenean vestibulum neque in eros
+                  lobortis, id gravida sem vulputate. Mauris eu mi quis mauris suscipit rutrum in id nunc.</p>
+              </div>
+            </div>
+          </div>
+    
+          <div class="card">
+            <div class="card-header" id="faq3-header">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#faq3" aria-expanded="false"
+                  aria-controls="faq3">
+                  Is the Expense Tracker app available on mobile devices?
+                </button>
+              </h5>
+            </div>
+            <div id="faq3" class="collapse" aria-labelledby="faq3-header" data-parent=".faq">
+              <div class="card-body">
+                <p>Sed vitae dapibus velit. Suspendisse volutpat, dui at egestas ultrices, nunc tellus fringilla risus, nec
+                  rhoncus neque massa ut dui. Vestibulum tincidunt dapibus est, nec fringilla ex semper at.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  <main>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </main>
+</body>
 
   <footer class="footer">
     <div class="block">
@@ -92,9 +131,5 @@
       <p>Copyright &copy; 2023</p>
     </div>
   </footer>
-  
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvHv0E94S6d6K6zG8s" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CYw5pAFbRTzabglLVjr8NTP8s5Rn5dciE2p5T2lXYB3j2D8e5hJwCfcoR" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
 </html>
+
