--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">njmki.n 
-                <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/templates/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Login</a>
