--- a/templates/index.html
+++ b/templates/index.html
@@ -9,167 +9,59 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="faqs.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="/Users/4G COMMUNICATIONS/Downloads/logo.png" alt="Logo" width="50" height="40" class="d-inline-block align-text-top">
-        Expense Tracker
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Register</a>
-              </li>
-          </ul>
-      </div>
-    </nav>
-  
-  <body>
-      <section class="container">
-          <h2>Welcome to Expense Tracker</h2>
-          <p>Track your expenses easily and efficiently with our Expense Tracker app.</p>
-      
-          <h3>Frequently Asked Questions</h3>
-          <div class="faq">
-            <div class="card">
-              <div class="card-header" id="faq1-header">
-                <h5 class="mb-0">
-                  <button class="btn btn-link" data-toggle="collapse" data-target="#faq1" aria-expanded="false"
-                    aria-controls="faq1">
-                    How does the Expense Tracker app work?
-                  </button>
-                </h5>
-              </div>
-              <div id="faq1" class="collapse" aria-labelledby="faq1-header" data-parent=".faq">
-                <div class="card-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus elit ut felis finibus, et euismod
-                    velit vestibulum. Sed tempus, urna ut lobortis luctus, nunc nunc congue sem, et volutpat justo ipsum id
-                    elit.</p>
-                </div>
-              </div>
-            </div>
-      
-            <div class="card">
-              <div class="card-header" id="faq2-header">
-                <h5 class="mb-0">
-                  <button class="btn btn-link" data-toggle="collapse" data-target="#faq2" aria-expanded="false"
-                    aria-controls="faq2">
-                    Can I sync the Expense Tracker with my bank accounts?
-                  </button>
-                </h5>
-              </div>
-              <div id="faq2" class="collapse" aria-labelledby="faq2-header" data-parent=".faq">
-                <div class="card-body">
-                  <p>Nullam aliquet mi sit amet quam facilisis, nec scelerisque dolor dapibus. Aenean vestibulum neque in eros
-                    lobortis, id gravida sem vulputate. Mauris eu mi quis mauris suscipit rutrum in id nunc.</p>
-                </div>
-              </div>
-            </div>
-      
-            <div class="card">
-              <div class="card-header" id="faq3-header">
-                <h5 class="mb-0">
-                  <button class="btn btn-link" data-toggle="collapse" data-target="#faq3" aria-expanded="false"
-                    aria-controls="faq3">
-                    Is the Expense Tracker app available on mobile devices?
-                  </button>
-                </h5>
-              </div>
-              <div id="faq3" class="collapse" aria-labelledby="faq3-header" data-parent=".faq">
-                <div class="card-body">
-                  <p>Sed vitae dapibus velit. Suspendisse volutpat, dui at egestas ultrices, nunc tellus fringilla risus, nec
-                    rhoncus neque massa ut dui. Vestibulum tincidunt dapibus est, nec fringilla ex semper at.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-    <main>
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </main>
-  </body>
-  
-    <footer class="footer">
-      <div class="block">
-        <div class="row">
-          <div class="footer-col">
-            <h4>
-              <img src="/templates/static/css/images/logo.png" alt="Logo">
-              Expense Tracker
-            </h4>
-          </div>
-  
-          <div class="footer-col">
-            <h4>FAQs</h4>
-            <ul>
-              <li><a href="faqs.html">Frequent Asked Question</a></li>
-            </ul>
-          </div>
-  
-          <div class="footer-col">
-            <h4>Reach us at:</h4>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>  
-          </div>
-  
-          <div class="footer-col">
-            <h4>Address</h4>  
-          </div>
-        </div>
-        <p>Copyright &copy; 2023</p>
-      </div>
-    </footer>
-  </html>
-  
-  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">
+      <img src="/templates/static/css/images/logo.png" alt="Logo" width="50" height="40" class="d-inline-block align-text-top">
+      Expense Tracker
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<body>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Register</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+
+  <section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">Expense Tracking app</h1>
+        <p class="lead text-muted">A cool Expense Tracking app. Manage your cash flow for a better tomorrow!</p>
+        <p>
+          text
+        </p>
+    </div>
+</section>
+
   <section class="container">
-      <div class="card">
-        <div class="card-image car-1"></div>
-          <h2>Title</h2>
-          <p>This is a paragraph about the first image.</p>
-          </div>
-        <div class="card">
-          <div class="card-image car-2"></div>
-          <h2>Title</h2>
-          <p>This is a paragraph about the second image.</p>
-        </div>
-        <div class="card">
-        <div class="card-image car-3"></div>
-          <h2>Title</h2>
-          <p>This is a paragraph about the third image.</p>
-        </div>
+    <div class="card">
+      <div class="card-image car-1"></div>
+      <h2>Title</h2>
+      <p>This is a paragraph about the first image.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-2"></div>
+      <h2>Title</h2>
+      <p>This is a paragraph about the second image.</p>
+    </div>
+    <div class="card">
+      <div class="card-image car-3"></div>
+      <h2>Title</h2>
+      <p>This is a paragraph about the third image.</p>
+    </div>
   </section>
+
   <main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -177,7 +69,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </main>
-</body>
 
   <footer class="footer">
     <div class="block">
@@ -192,7 +83,7 @@
         <div class="footer-col">
           <h4>FAQs</h4>
           <ul>
-            <li><a href="faqs.html">Frequent Asked Question</a></li>
+            <li><a href="faqs.html">Frequently Asked Questions</a></li>
           </ul>
         </div>
 
@@ -210,8 +101,8 @@
           <h4>Address</h4>  
         </div>
       </div>
-      <p>Copyright &copy; 2023</p>
+      <p>&copy; 2023 Expense Tracker</p>
     </div>
   </footer>
+</body>
 </html>
-
