--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -24,73 +24,125 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="#">Register</a>
                 </li>
             </ul>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
-        <h1>Login</h1>
-        <form method="POST" action="/login">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+        <div class="login-container">
+            <div class="profile-icon">
+                <i class="fas fa-user-circle fa-5x"></i>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+            <h2>Login</h2>
+            <form method="POST" action="login.py">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="username" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <div class="password-input">
+                        <input type="password" class="form-control" id="password" name="password" required>
+                        <span class="password-toggle" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+            <div class="social-login">
+                <p>Or login with:</p>
+                <a href="#" class="btn btn-social btn-facebook" onclick="checkAccountLink('facebook')"><i class="fab fa-facebook-f"></i> Facebook</a>
+                <a href="#" class="btn btn-social btn-google" onclick="checkAccountLink('google')"><i class="fab fa-google"></i> Google</a>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+        </div>
     </div>
 
-<main>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</main>
-</body>
-    
-<footer class="footer">
-    <div class="block">
-        <div class="row">
-            <div class="footer-col">
-              <h4>
-                <img src="/templates/static/css/images/logo.png" alt="Logo">
-                Expense Tracker
-              </h4>
-            ]</div>
-    
-            <div class="footer-col">
-              <h4>FAQs</h4>
-              <ul>
-                <li><a href="faqs.html">Frequent Asked Question</a></li>
-              </ul>
+    <main>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script>
+            function togglePasswordVisibility() {
+                var passwordInput = document.getElementById("password");
+                var passwordToggle = document.querySelector(".password-toggle");
+                if (passwordInput.type === "password") {
+                    passwordInput.type = "text";
+                    passwordToggle.innerHTML = '<i class="fas fa-eye-slash"></i>';
+                } else {
+                    passwordInput.type = "password";
+                    passwordToggle.innerHTML = '<i class="fas fa-eye"></i>';
+                }
+            }
+
+            function checkAccountLink(provider) {
+                // Assume a function `isAccountLinked(provider)` exists to check if the account is already linked
+
+                // Replace the condition with the actual check for account linking
+                if (!isAccountLinked(provider)) {
+                    alert("Please link your " + provider + " account to continue.");
+                    // You can redirect the user to the account linking page or perform other actions here
+                } else {
+                    // Proceed with the login process
+                    // You can replace this line with the actual login logic
+                    alert("Logged in with " + provider + " account.");
+                }
+            }
+
+            function isAccountLinked(provider) {
+                // Assume this function checks if the account is linked
+                // Replace the condition with the actual check for account linking
+                if (provider === 'facebook') {
+                    // Check if the Facebook account is linked
+                    return true; // Replace with the actual check
+                } else if (provider === 'google') {
+                    // Check if the Google account is linked
+                    return false; // Replace with the actual check
+                }
+
+                return false;
+            }
+        </script>
+    </main>
+
+    <footer class="footer">
+        <div class="block">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>
+                        <img src="/templates/static/css/images/logo.png" alt="Logo">
+                        Expense Tracker
+                    </h4>
+                </div>
+
+                <div class="footer-col">
+                    <h4>FAQs</h4>
+                    <ul>
+                        <li><a href="faqs.html">Frequent Asked Question</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Reach us at:</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Address</h4>
+                </div>
             </div>
-    
-            <div class="footer-col">
-              <h4>Reach us at:</h4>
-              <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              </div>  
-            </div>
-    
-            <div class="footer-col">
-              <h4>Address</h4>  
-            </div>
-          </div>
-          <p>Copyright &copy; 2023</p>
+            <p>&copy; 2023</p>
         </div>
     </footer>
+</body>
 </html>
-    
-    
