--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -20,6 +20,24 @@ body {
   min-height: 100vh; /* Added */
 }
 
+/*registration form */
+.lregister-container {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 300px;
+  background-color: white;
+  padding: 20px;
+  border-left: 1px solid #ddd;
+}
+
+.collapse.show .lregister-container {
+  display: block;
+}
+/* ... */
+
+
 .container {
   display: flex;
   justify-content: center;
